wordpress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worpdress-ing
spec:
  # tls:
  # - hosts:
  #   - ajay.com
  #   secretName: registryio
  rules:
  - host: "ajay.com"
    http:
      paths:
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
